--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -4,4 +4,10 @@
     font-size: 30px;
     font-weight: 700;
     text-align: center;
+    text-transform: uppercase;
+    &_left {
+        color: #ffffff;
+        font-size: 36px;
+        text-align: left;
+    }
 }
