3 section with mobile version

--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -42,3 +42,40 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .advantages {
+        &__title {
+            font-size: 16px;
+        }
+        &__descr {
+            font-size: 12px;
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .advantages {
+        &__block {
+            flex-direction: column;
+            align-items: center;
+            margin-top: 47px;
+        }
+        &__item {
+            margin-bottom: 20px;
+            max-width: 270px;
+            br {
+                display: none;
+            }
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+        &__title {
+            margin-top: 0;
+        }
+        &__descr {
+            margin-top: 0;
+        }
+    }
+}
