--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -9,3 +9,23 @@
         font-weight: 500;
     }
 }
+
+@media (max-width: 767px) {
+    .consultation {
+        padding: 80px 0;
+        &__descr {
+            margin-top: 70px;
+            text-align: center;
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .consultation {
+        padding: 70px 0;
+        &__descr {
+            font-size: 18px;
+            margin-top: 50px;
+        }
+    }
+}
