--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -18,3 +18,13 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .feed-form {
+        margin: 0 auto; 
+        margin-top: 36px;
+        input {
+            height: 45px;
+        }
+    }
+}
