--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -20,3 +20,22 @@
         font-size: 16px;
     }
 }
+
+@media (max-width: 575px) {
+    .button {
+        width: 135px;
+        height: 27px;
+        font-size: 10px;
+        &_main {
+            margin-top: 67px;
+            width: 300px;
+            height: 50px;
+            font-size: 16px;
+        }
+        &_submit {
+            width: 100%;
+            height: 50px;
+            font-size: 16px;
+        }
+    }
+}
