--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -35,6 +35,27 @@
     }
 }
 
-@media (max-width: 991px) {
-    
+@media (max-width: 767px) {
+    .header {
+        &__logo {
+            width: 225px;
+        }
+        &__official {
+            display: none;
+        }
+        &__phone {
+            font-size: 16px;
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .header {
+        &__logo {
+            width: 50%;
+        }
+        &__phone {
+            font-size: 14px;
+        }
+    }
 }
