--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -11,3 +11,22 @@
         text-align: left;
     }
 }
+
+@media (max-width: 767px) {
+    .title {
+        &_left {
+            text-align: center;
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .title {
+        font-size: 22px;
+        &_left {
+            br {
+                display: none;
+            }
+        }
+    }
+}
