--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,7 +1,7 @@
 .consultation {
     min-height: 680px;
     padding: 100px 0 92px;
-    background: url('../../img/consultation_bg.png') center (center/cover) no-repeat;
+    background: url('../img/consultation_bg.png') center (center/cover) no-repeat;
     &__descr {
         margin-top: 80px;
         color: #ffffff;
