--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -5,7 +5,7 @@
         width: 750px;
         margin: 0 auto; 
     }
-    .slick-prev, .slick-next {
+    .prev, .next {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -17,8 +17,28 @@
             height: 50px;
         }
     }
-    .slick-next {
+    .next {
         right: -66px;
         left: auto;
+    }
+    .tns-item {
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+    }
+    .tns-nav {
+        display: flex;
+        justify-content: space-between;
+        width: 56px;
+        margin: 0 auto;
+        button {
+            padding: 4px;
+            border-radius: 50%;
+            background-color: #fff;
+        }
+        .tns-nav-active {
+            background-color: #0d0d0d;
+        }
     }
 }
