--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,11 +1,11 @@
 .carousel {
-    position: relative;
     padding: 81px 0;
     &__inner {
+        position: relative;
         width: 750px;
         margin: 0 auto; 
     }
-    .prev, .next {
+    .slick-prev, .slick-next {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -17,28 +17,64 @@
             height: 50px;
         }
     }
-    .next {
+    .slick-next {
         right: -66px;
         left: auto;
     }
-    .tns-item {
-        img {
-            display: block;
-            margin: 0 auto;
+    .slick-dots {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 70px;
+        margin: 0 auto;
+        margin-top: 15px;
+        padding: 0;
+        list-style-type: none;
+        li {
+            padding: 0;
+            margin: 0;
+        }
+        button {
+            font-size: 0;
+            line-height: 0;
+            padding: 0;
+            width: 15px;
+            height: 15px;
+            background-color: #f1f1f1;
+            border: 1px solid #6c6c6c;
+            border-radius: 50%;
+            outline: none;
         }
     }
-    .tns-nav {
-        display: flex;
-        justify-content: space-between;
-        width: 56px;
-        margin: 0 auto;
+    .slick-active {
         button {
-            padding: 4px;
-            border-radius: 50%;
-            background-color: #fff;
+            background-color: #c9c9c9;
         }
-        .tns-nav-active {
-            background-color: #0d0d0d;
+    }
+}
+
+@media (max-width: 767px) {
+    .carousel {
+        &__inner {
+            max-width: 750px;
+            width: 100%;
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .carousel {
+        padding: 50px 0;
+        .slick-dots {
+            width: 50px;
+            margin-top: 5px;
+            button {
+                width: 10px;
+                height: 10px;
+            }
         }
     }
 }
