--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -42,5 +42,9 @@
             height: 50px;
             font-size: 16px;
         }
+        &_mini {
+            width: 118px;
+            height: 29px;
+        }
     }
 }
