--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -183,6 +183,9 @@
         padding-bottom: 50px;
         &__tab {
             font-size: 16px;
+            &:hover {
+                box-shadow: 2px 2px 10px $main-color;
+            }        
         }
         &__content {
             margin-top: 35px;
@@ -195,5 +198,55 @@
             }
         }
 
+    }
+}
+
+@media (max-width: 575px) {
+    .catalog {
+        &__tabs {
+            margin-top: 30px;
+            flex-wrap: wrap;
+        }
+        &__tab {
+            margin-top: 10px;
+            width: 137px;
+            height: 30px;
+            border-width: 1px;
+            font-size: 12px;
+            line-height: 28px;
+            transform: skewX(-15deg);
+            &_active {
+                margin-top: 10px;
+                width: 137px;
+                height: 30px;
+                border-width: 1px;
+                font-size: 12px;
+                line-height: 28px;
+                transform: skewX(-15deg);
+            }
+            &:hover {
+                border: none;
+                box-shadow: none;
+            }
+            div {
+                transform: skewX(15deg);
+            }
+        }
+        &__content {
+            margin-top: 30px;
+        }
+        &-item {
+            padding: 15px 15px 18px;
+            width: 300px;
+            &__subtitle {
+                margin-top: 15px;
+            }
+            &__descr {
+                margin-top: 10px;
+            }
+            hr {
+                margin: 18px 0 17px;
+            }
+        }
     }
 }
