--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -49,6 +49,9 @@
         img {
             height: 27px;
         }
+        &:hover {
+            box-shadow: 2px -2px 15px #ffffff;
+        }
     }
 }
 
