--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -8,6 +8,7 @@
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
+    transition: 0.5s all;
     &:hover {
         background-color: #fff;
         border: 2px solid $main-color;
@@ -29,6 +30,20 @@
         width: 131px;
         height: 40px;
         font-size: 14px;
+    }
+}
+
+@media (max-width: 767px) {
+    .button {
+        &_submit {
+            height: 50px;
+        }
+        &_modal {
+            height: 47px;
+        }
+        &:hover {
+            display: none;
+        }
     }
 }
 
