--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -22,10 +22,11 @@
 
 @media (max-width: 575px) {
     .consultation {
-        padding: 70px 0;
+        padding: 60px 0;
+        min-height: 600px;
         &__descr {
             font-size: 18px;
-            margin-top: 50px;
+            margin-top: 25px;
         }
     }
 }
