--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -17,6 +17,10 @@
             margin-bottom: 20px;
         }
     }
+    &_mt25 {
+        margin: 0 auto;
+        margin-top: 25px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -26,5 +30,24 @@
         input {
             height: 45px;
         }
+        &_mt25 {
+            margin-top: 15px;
+        }
+        &_modal {
+            input {
+                margin-bottom: 10px;
+                padding: 0 15px;
+                height: 42px;
+                &:nth-child(3) {
+                    margin-bottom: 15px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 575px) {
+    .feed-form {
+        margin-top: 30px;
     }
 }
