--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -69,10 +69,12 @@
         &__header {
             font-size: 38px;
             line-height: 48px;
+            text-align: center;
         }
         &__subheader {
             margin-top: 7px;
             font-size: 20px;
+            text-align: center;
         }
         &__icons {
             width: 100%;
