--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,10 +22,18 @@
 @import 'blocks/catalog';
 @import 'blocks/reviews';
 @import 'blocks/footer';
+@import 'blocks/modal';
 
 @media (max-width: 991px) {
     .container {
         width: 100%;
         padding: 0 15px;
+    }
+}
+
+@media (max-width: 575px) {
+    .container {
+        width: 100%;
+        padding: 0 10px;
     }
 }
