--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -8,6 +8,16 @@
         font-size: 20px;
         font-weight: 500;
     }
+    .error {
+        border: 1px solid $main-color;
+    }
+    label.error {
+        border: none;
+        font-weight: 300;
+        color: #ffffff;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 }
 
 @media (max-width: 767px) {
