--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -41,6 +41,16 @@
     &_mini {
         min-height: 140px;
     }
+    .error {
+        border: 1px solid $main-color;
+    }
+    label.error {
+        border: none;
+        font-weight: 300;
+        color: $main-color;
+        text-align: center;
+        margin-bottom: 10px;
+    }
 }
 
 #consultation, #order, #thanks {
