--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,6 +23,7 @@
 @import 'blocks/reviews';
 @import 'blocks/footer';
 @import 'blocks/modal';
+@import 'blocks/page-up';
 
 @media (max-width: 991px) {
     .container {
