--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -104,14 +104,16 @@
             width: 50%;
             margin-left: 20px;
             padding-right: 20px;
-            padding-left: 0;
-            margin-bottom: 0;
             transform: translateX(0%);
             transition: 0.5s all;
-            list-style-type: none;
             &_active {
                 margin-left: 19px;
                 transform: translateX(-100%)
+            }
+            ul {
+                padding-left: 0;
+                margin-bottom: 0;
+                list-style-type: none;
             }
             li {
                 position: relative;
