--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -53,6 +53,10 @@
             box-shadow: 2px -2px 15px #ffffff;
         }
     }
+    iframe {
+        width: 100%;
+        height: 630px;
+    }
 }
 
 @media (max-width: 991px) {
