--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,11 @@
+@import "libs/bootstrap-reboot.min";
+@import "libs/font";
+@import "libs/slick";
+@import "libs/animate";
+
 @import "base/variables";
 @import "base/mixins";
+@import 'base/animations';
 
 * {
     font-family: 'Museo Sans Cyrl', sans-serif
